name:                glazier-react
version:             2.0.0.0
synopsis:            ReactJS binding using Glazier.Command.
description:         ReactJS binding using Glazier.Commmand. Please see README.md.
homepage:            https://github.com/louispan/glazier-react#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Web, GUI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  js-sources:          jsbits/react.js
                       jsbits/registry.js
  exposed-modules:     Glazier.React
                       Glazier.React.Common
                       Glazier.React.Element
                       Glazier.React.Event.HashChange
                       Glazier.React.Event.Keyboard
                       Glazier.React.Event.Mouse
                       Glazier.React.Event.Synthetic
                       Glazier.React.EventTarget
                       Glazier.React.EventTarget.Internal
                       Glazier.React.Markup
                       Glazier.React.NativeEvent
                       Glazier.React.NativeEvent.Internal
                       Glazier.React.Notice
                       Glazier.React.Notice.Internal
                       Glazier.React.Obj
                       Glazier.React.Obj.Internal
                       Glazier.React.Plan
                       Glazier.React.Plan.Internal
                       Glazier.React.ReactDOM
                       Glazier.React.ReactId
                       Glazier.React.ReactId.Internal
                       Glazier.React.Reactor
                       Glazier.React.Reactor.Exec
                       Glazier.React.Shim
                       Glazier.React.Shim.Internal
                       Glazier.React.Widget
  build-depends:       base >= 4.9.0 && < 5
                     , aeson >= 1.4.2.0
                     , aeson-applicative >= 1.4
                     , async >= 2.2
                     , alternators >= 2.0
                     , containers >= 0.5
                     , data-diverse >= 4.6
                     , data-diverse-lens >= 4.3
                     , deepseq >= 1.4
                     , dlist >= 0.8
                     , glazier >= 2.0
                     , hashable >= 1.2
                     , javascript-extras >= 0.6
                     , lens >= 4
                     , lens-misc >= 0.0.2
                     , mmorph >= 1
                     , mtl >= 2
                     , newtype-generics >= 0.5
                     , profunctors >= 2.5
                     , stm >= 2.5
                     , StateVar >= 1.1.1
                     , tagged >= 0.8
                     , text >= 1.2
                     , transformers >= 0.4
                     , unordered-containers >= 0.2.8
                     , unliftio >= 0.2.10
                     , unliftio-core >= 0.1.2
                     , vector >= 0.11
  default-language:    Haskell2010
  default-extensions:  ApplicativeDo
  ghc-options:         -Wall -Wredundant-constraints
  if impl(ghcjs)
    build-depends: ghcjs-base
  if !impl(ghcjs)
    build-depends: ghcjs-base-stub >= 0.2.1

source-repository head
  type:     git
  location: https://github.com/louispan/glazier-react
