cabal-version:        2.2
name:                 glazier-react
version:              2.0.0.0
synopsis:             ReactJS binding using Glazier.Command.
description:          ReactJS binding using Glazier.Commmand. Please see README.md.
homepage:             https://github.com/louispan/glazier-react#readme
license:              BSD-3-Clause
license-file:         LICENSE
author:               Louis Pan
maintainer:           louis@pan.me
copyright:            2019 Louis Pan
category:             Web, GUI
build-type:           Simple
stability:           experimental
extra-source-files:   README.md

library
  hs-source-dirs:     src
  js-sources:         jsbits/glazier-react.js
  exposed-modules:    Glazier.React
                      Glazier.React.Common
                      Glazier.React.Component
                      Glazier.React.Component.Internal
                      Glazier.React.Core
                      Glazier.React.Core.Internal
                      Glazier.React.Exec
                      Glazier.React.Main
                      Glazier.React.Markup
                      Glazier.React.Model
                      Glazier.React.Obj
                      Glazier.React.Obj.Internal
                      Glazier.React.Plan
                      Glazier.React.Plan.Internal
                      Glazier.React.ReactBatch
                      Glazier.React.ReactBatch.Internal
                      Glazier.React.ReactDOM
                      Glazier.React.ReactElement
                      Glazier.React.ReactElement.Internal
                      Glazier.React.ReactId
                      Glazier.React.ReactId.Internal
                      Glazier.React.Reactant
                      Glazier.React.Reactant.Exec
                      Glazier.React.Reactor
                      Glazier.React.ReactCont
                      Glazier.React.ReactPath
                      Glazier.React.Synthetic
                      Glazier.React.Synthetic.Internal
  build-depends:      base >= 4.9.0 && < 5
                    , aeson >= 1.4.2.0
                    , aeson-applicative >= 1.4
                    , async >= 2.2
                    , alternators >= 2.0
                    , containers >= 0.5
                    , data-diverse >= 4.6
                    , data-diverse-lens >= 4.3
                    , deepseq >= 1.4
                    , dlist >= 0.8
                    , ghcjs-base-stub >= 0.3.0.2
                    , glazier >= 2.0
                    , hashable >= 1.2
                    , javascript-extras >= 1.0
                    , lens >= 4
                    , lens-misc >= 0.0.3
                    , mmorph >= 1
                    , monad-st >= 0.2
                    , mtl >= 2
                    , newtype-generics >= 0.5
                    , profunctors >= 2.5
                    , stm >= 2.5
                    , StateVar >= 1.1.1
                    , tagged >= 0.8
                    , text >= 1.2
                    , transformers >= 0.4
                    , unordered-containers >= 0.2.8
                    , unliftio >= 0.2.10
                    , unliftio-core >= 0.1.2
                    , vector >= 0.11
  default-language:   Haskell2010
  default-extensions: ApplicativeDo
  ghc-options:        -Wall

source-repository head
  type:               git
  location:           https://github.com/louispan/glazier-react
